--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -70,18 +70,11 @@
     "math_score = np.array([60,85,60,68,55,60])\n",
     "chinese_score = np.array([65,90,82,72,66,77])\n",
     "\n",
-    "E_mean = english_score.mean()\n",
-    "E_max = english_score.max()\n",
-    "E_min = english_score.min()\n",
-    "E_std = english_score.std()\n",
-    "M_mean = np.nanmean(math_score)\n",
+    "\n",
+    "M_mean = np.mean(math_score)\n",
     "M_max = np.nanmax(math_score)\n",
     "M_min = np.nanmin(math_score)\n",
     "M_std = np.nanstd(math_score)\n",
-    "C_mean = chinese_score.mean()\n",
-    "C_max = chinese_score.max()\n",
-    "C_min = chinese_score.min()\n",
-    "C_std = chinese_score.std()\n",
     "\n",
     "print(f'English : mean = {E_mean:.2f}, max = {E_max:.2f}, min = {E_min:.2f}, std = {E_std:.2f}')\n",
     "print(f'Math : mean = {M_mean:.2f}, max = {M_max:.2f}, min = {M_min:.2f}, std = {M_std:.2f}')\n",
@@ -90,12 +83,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.97792828]\n",
+      " [0.97792828 1.        ]] \n",
+      " [[1.         0.74056803]\n",
+      " [0.74056803 1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "#3. 用補考後資料找出與國文成績相關係數最高的學科?\n",
-    "np.corrcoef(english_score,)"
+    "corEC = np.corrcoef(english_score,chinese_score)\n",
+    "corMC = np.corrcoef(math_score,chinese_score)\n",
+    "print(corEC, \"\\n\", corMC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "英文與國文相關係數最高"
    ]
   }
  ],
