--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -50,35 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "English : mean = 67.17, max = 89.00, min = 48.00, std = 13.43\n",
-      "Math : mean = 64.67, max = 85.00, min = 55.00, std = 9.86\n",
-      "Chinese : mean = 75.33, max = 90.00, min = 65.00, std = 8.83\n"
+      "Math : mean = 64.67, max = 85.00, min = 55.00, std = 9.86\n"
      ]
     }
    ],
    "source": [
     "#2. 第五位同學補考數學後成績為55，請計算補考後數學成績平均、最大值、最小值、標準差?\n",
-    "#1. 請計算各科成績平均、最大值、最小值、標準差，其中數學缺一筆資料可忽略?\n",
-    "english_score = np.array([55,89,76,65,48,70])\n",
-    "math_score = np.array([60,85,60,68,55,60])\n",
-    "chinese_score = np.array([65,90,82,72,66,77])\n",
     "\n",
+    "math_score = np.array([60,85,60,68,55,60])\n",
     "\n",
     "M_mean = np.mean(math_score)\n",
-    "M_max = np.nanmax(math_score)\n",
-    "M_min = np.nanmin(math_score)\n",
-    "M_std = np.nanstd(math_score)\n",
+    "M_max = np.max(math_score)\n",
+    "M_min = np.min(math_score)\n",
+    "M_std = np.std(math_score)\n",
     "\n",
-    "print(f'English : mean = {E_mean:.2f}, max = {E_max:.2f}, min = {E_min:.2f}, std = {E_std:.2f}')\n",
-    "print(f'Math : mean = {M_mean:.2f}, max = {M_max:.2f}, min = {M_min:.2f}, std = {M_std:.2f}')\n",
-    "print(f'Chinese : mean = {C_mean:.2f}, max = {C_max:.2f}, min = {C_min:.2f}, std = {C_std:.2f}')"
+    "print(f'Math : mean = {M_mean:.2f}, max = {M_max:.2f}, min = {M_min:.2f}, std = {M_std:.2f}')"
    ]
   },
   {
