--- a/HW8.ipynb
+++ b/HW8.ipynb
@@ -65,32 +65,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([67.5, 75.3, 80.8, 90.4, 78.4, 70.7], dtype=float32)"
+       "77.18333"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#3. 呈上題，進一步算出男生(sex欄位是boy)平均體重\n",
-    "l[l['sex'] == 'boy']['weight']"
+    "np.mean(l[l['sex'] == 'boy']['weight'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47.8"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#4. 呈上題，進一步算出女生(sex欄位是girl)平均體重"
+    "#4. 呈上題，進一步算出女生(sex欄位是girl)平均體重\n",
+    "np.mean(l[l['sex'] == 'girl']['weight'])"
    ]
   }
  ],
