--- a/Hw12.ipynb
+++ b/Hw12.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tax 的中位數介於300-400"
+    "Tax, B 的中位數介於300-400"
    ]
   },
   {
