--- a/Hw12.ipynb
+++ b/Hw12.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "df = pd.read_csv('boston.csv')\n",
     "print(df)\n",
-    "df.boxplot()"
+    "df.boxplot(figsize = (10,5))"
    ]
   },
   {
