--- a/HW13.ipynb
+++ b/HW13.ipynb
@@ -139,36 +139,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.0\n"
+      "56.333333333333336\n"
      ]
     }
    ],
    "source": [
     "#1. 6號學生(student_id=6)3科平均分數為何?\n",
-    "# 55\n",
-    "median = score_df.median(axis = 1)\n",
-    "print(median[6])"
+    "# 56.33\n",
+    "mean = score_df.mean(axis = 1)\n",
+    "print(mean[6])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "63.0"
+       "59.833333333333336"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,132 +176,25 @@
    "source": [
     "#2. 6號學生3科平均分數是否有贏過班上一半的同學\n",
     "# 否\n",
-    "median_all =median.median()\n",
-    "median_all"
+    "mean_all =mean.median()\n",
+    "mean_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>student_id</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>english_score</th>\n",
-       "      <th>chinese_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>74.833148</td>\n",
-       "      <td>81.240384</td>\n",
-       "      <td>83.666003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>14.142136</td>\n",
-       "      <td>94.868330</td>\n",
-       "      <td>67.082039</td>\n",
-       "      <td>58.309519</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17.320508</td>\n",
-       "      <td>67.082039</td>\n",
-       "      <td>56.568542</td>\n",
-       "      <td>74.161985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>83.666003</td>\n",
-       "      <td>87.749644</td>\n",
-       "      <td>94.339811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>22.360680</td>\n",
-       "      <td>74.833148</td>\n",
-       "      <td>89.442719</td>\n",
-       "      <td>83.666003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>24.494897</td>\n",
-       "      <td>77.459667</td>\n",
-       "      <td>73.484692</td>\n",
-       "      <td>74.161985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>26.457513</td>\n",
-       "      <td>67.082039</td>\n",
-       "      <td>83.666003</td>\n",
-       "      <td>88.881944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>28.284271</td>\n",
-       "      <td>58.309519</td>\n",
-       "      <td>87.749644</td>\n",
-       "      <td>87.177979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>93.273791</td>\n",
-       "      <td>77.459667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>31.622777</td>\n",
-       "      <td>93.808315</td>\n",
-       "      <td>63.245553</td>\n",
-       "      <td>65.574385</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   student_id  math_score  english_score  chinese_score\n",
-       "0   10.000000   74.833148      81.240384      83.666003\n",
-       "1   14.142136   94.868330      67.082039      58.309519\n",
-       "2   17.320508   67.082039      56.568542      74.161985\n",
-       "3   20.000000   83.666003      87.749644      94.339811\n",
-       "4   22.360680   74.833148      89.442719      83.666003\n",
-       "5   24.494897   77.459667      73.484692      74.161985\n",
-       "6   26.457513   67.082039      83.666003      88.881944\n",
-       "7   28.284271   58.309519      87.749644      87.177979\n",
-       "8   30.000000   50.000000      93.273791      77.459667\n",
-       "9   31.622777   93.808315      63.245553      65.574385"
+       "math_score       77.459667\n",
+       "english_score    73.484692\n",
+       "chinese_score    74.161985\n",
+       "Name: 6, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,16 +202,31 @@
    "source": [
     "#由於班上同學成績不好，所以學校統一加分，加分方式為開根號乘以十，請問6號同學3科成績分別是?\n",
     "score_apply = score_df.apply(lambda x : x**(0.5)*10)\n",
-    "score_apply"
+    "score_apply.iloc[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "math_score       74.194221\n",
+       "english_score    78.350301\n",
+       "chinese_score    78.739928\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#承上題，加分後各科班平均變多少\n"
+    "#承上題，加分後各科班平均變多少\n",
+    "score_apply.mean(axis = 0)"
    ]
   }
  ],
