--- a/HW15.ipynb
+++ b/HW15.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.944444444444443\n"
+      "7.333333333333329\n"
      ]
     }
    ],
@@ -493,7 +493,7 @@
     "print('c) \\n')\n",
     "DF = df.groupby('sex').agg('mean')\n",
     "display(DF)\n",
-    "ans = DF['english_score']['girl'] - DF['english_score']['boy']\n",
+    "ans = DF['chinese_score']['girl'] - DF['chinese_score']['boy']\n",
     "print(ans)"
    ]
   }
