--- a/HW18.ipynb
+++ b/HW18.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,9 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a) \n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -237,16 +245,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>variable</th>\n",
-       "      <th>chinese_score</th>\n",
-       "      <th>english_score</th>\n",
+       "      <th>student_id</th>\n",
        "      <th>math_score</th>\n",
+       "      <th>english_score</th>\n",
+       "      <th>chinese_score</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>sex</th>\n",
        "      <th>class</th>\n",
-       "      <th>student_id</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -254,135 +260,241 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">boy</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
        "      <th>1</th>\n",
-       "      <td>70</td>\n",
+       "      <td>9</td>\n",
+       "      <td>98</td>\n",
        "      <td>80</td>\n",
-       "      <td>50</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>70</td>\n",
+       "      <td>77</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>55</td>\n",
-       "      <td>43</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
-       "      <th>2</th>\n",
-       "      <td>50</td>\n",
-       "      <td>45</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>15</td>\n",
        "      <td>89</td>\n",
-       "      <td>69</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">3</th>\n",
-       "      <th>11</th>\n",
-       "      <td>45</td>\n",
-       "      <td>60</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>23</td>\n",
-       "      <td>60</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"9\" valign=\"top\">girl</th>\n",
-       "      <th rowspan=\"3\" valign=\"top\">1</th>\n",
-       "      <th>5</th>\n",
-       "      <td>60</td>\n",
-       "      <td>79</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>77</td>\n",
-       "      <td>70</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>60</td>\n",
-       "      <td>57</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
-       "      <th>6</th>\n",
-       "      <td>55</td>\n",
-       "      <td>68</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>76</td>\n",
-       "      <td>77</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">3</th>\n",
-       "      <th>10</th>\n",
-       "      <td>43</td>\n",
-       "      <td>40</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>66</td>\n",
        "      <td>90</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>50</td>\n",
-       "      <td>50</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
        "      <td>77</td>\n",
-       "      <td>67</td>\n",
-       "      <td>89</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "variable               chinese_score  english_score  math_score\n",
-       "sex  class student_id                                          \n",
-       "boy  1     1                      70             80          50\n",
-       "           3                      55             43          98\n",
-       "     2     2                      50             45          60\n",
-       "           4                      89             69          70\n",
-       "     3     11                     45             60          25\n",
-       "           12                     23             60          80\n",
-       "girl 1     5                      60             79          56\n",
-       "           7                      77             70          45\n",
-       "           9                      60             57          25\n",
-       "     2     6                      55             68          60\n",
-       "           8                      76             77          55\n",
-       "     3     10                     43             40          88\n",
-       "           13                     66             90          20\n",
-       "           14                     50             50          50\n",
-       "           15                     77             67          89"
+       "       student_id  math_score  english_score  chinese_score\n",
+       "class                                                      \n",
+       "1               9          98             80             77\n",
+       "2               8          70             77             89\n",
+       "3              15          89             90             77"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "DF = df.melt(id_vars=['sex','class','student_id'])\n",
-    "DF.pivot(index=['sex', 'class', 'student_id'], columns='variable', values='value')"
+    "print('a) \\n')\n",
+    "DF = df.groupby('class').agg('max','min')\n",
+    "display(DF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b) \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>english_score</th>\n",
+       "      <th>chinese_score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>class</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>54.800000</td>\n",
+       "      <td>65.800000</td>\n",
+       "      <td>64.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>61.250000</td>\n",
+       "      <td>64.750000</td>\n",
+       "      <td>67.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12.5</td>\n",
+       "      <td>58.666667</td>\n",
+       "      <td>61.166667</td>\n",
+       "      <td>50.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       student_id  math_score  english_score  chinese_score\n",
+       "class                                                      \n",
+       "1             5.0   54.800000      65.800000      64.400000\n",
+       "2             5.0   61.250000      64.750000      67.500000\n",
+       "3            12.5   58.666667      61.166667      50.666667"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('b) \\n')\n",
+    "DF = df.groupby('class').agg('mean')\n",
+    "display(DF)\n",
+    "print(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c) \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>english_score</th>\n",
+       "      <th>chinese_score</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>boy</th>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>63.833333</td>\n",
+       "      <td>59.500000</td>\n",
+       "      <td>55.333333</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>girl</th>\n",
+       "      <td>9.666667</td>\n",
+       "      <td>54.222222</td>\n",
+       "      <td>66.444444</td>\n",
+       "      <td>62.666667</td>\n",
+       "      <td>2.111111</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      student_id  math_score  english_score  chinese_score     class\n",
+       "sex                                                                 \n",
+       "boy     5.500000   63.833333      59.500000      55.333333  2.000000\n",
+       "girl    9.666667   54.222222      66.444444      62.666667  2.111111"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.333333333333329\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('c) \\n')\n",
+    "DF = df.groupby('sex').agg('mean')\n",
+    "display(DF)\n",
+    "ans = DF['chinese_score']['girl'] - DF['chinese_score']['boy']\n",
+    "print(ans)"
    ]
   }
  ],
