--- a/HW16.ipynb
+++ b/HW16.ipynb
@@ -4,107 +4,229 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>english_score</th>\n",
+       "      <th>chinese_score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>student_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>66</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90</td>\n",
+       "      <td>45</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70</td>\n",
+       "      <td>77</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>56</td>\n",
+       "      <td>80</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>60</td>\n",
+       "      <td>54</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>45</td>\n",
+       "      <td>70</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>34</td>\n",
+       "      <td>77</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>25</td>\n",
+       "      <td>87</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>88</td>\n",
+       "      <td>40</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2019-01-01     0\n",
-       "2019-01-02     1\n",
-       "2019-01-03     2\n",
-       "2019-01-04     3\n",
-       "2019-01-05     4\n",
-       "2019-01-06     5\n",
-       "2019-01-07     6\n",
-       "2019-01-08     7\n",
-       "2019-01-09     8\n",
-       "2019-01-10     9\n",
-       "2019-01-11    10\n",
-       "2019-01-12    11\n",
-       "2019-01-13    12\n",
-       "2019-01-14    13\n",
-       "2019-01-15    14\n",
-       "2019-01-16    15\n",
-       "2019-01-17    16\n",
-       "2019-01-18    17\n",
-       "2019-01-19    18\n",
-       "2019-01-20    19\n",
-       "Freq: D, dtype: int64"
+       "            math_score  english_score  chinese_score\n",
+       "student_id                                          \n",
+       "1                   56             66             70\n",
+       "2                   90             45             34\n",
+       "3                   45             32             55\n",
+       "4                   70             77             89\n",
+       "5                   56             80             70\n",
+       "6                   60             54             55\n",
+       "7                   45             70             79\n",
+       "8                   34             77             76\n",
+       "9                   25             87             60\n",
+       "10                  88             40             43"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "index = pd.date_range('1/1/2019', periods=20, freq='D')\n",
-    "series = pd.Series(range(20), index=index)\n",
-    "series"
+    "score_df = pd.DataFrame([[1,56,66,70], [2,90,45,34], [3,45,32,55], [4,70,77,89], [5,56,80,70], [6,60,54,55], [7,45,70,79], [8,34,77,76], [9,25,87,60], [10,88,40,43]],columns=['student_id','math_score','english_score','chinese_score'])\n",
+    "score_df = score_df.set_index('student_id')\n",
+    "score_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.333333333333336\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1. 6號學生(student_id=6)3科平均分數為何?\n",
+    "# 56.33\n",
+    "mean = score_df.mean(axis = 1)\n",
+    "print(mean[6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2018-12-31/2019-01-06     0\n",
-       "2018-12-31/2019-01-06     1\n",
-       "2018-12-31/2019-01-06     2\n",
-       "2018-12-31/2019-01-06     3\n",
-       "2018-12-31/2019-01-06     4\n",
-       "2018-12-31/2019-01-06     5\n",
-       "2019-01-07/2019-01-13     6\n",
-       "2019-01-07/2019-01-13     7\n",
-       "2019-01-07/2019-01-13     8\n",
-       "2019-01-07/2019-01-13     9\n",
-       "2019-01-07/2019-01-13    10\n",
-       "2019-01-07/2019-01-13    11\n",
-       "2019-01-07/2019-01-13    12\n",
-       "2019-01-14/2019-01-20    13\n",
-       "2019-01-14/2019-01-20    14\n",
-       "2019-01-14/2019-01-20    15\n",
-       "2019-01-14/2019-01-20    16\n",
-       "2019-01-14/2019-01-20    17\n",
-       "2019-01-14/2019-01-20    18\n",
-       "2019-01-14/2019-01-20    19\n",
-       "Freq: W-SUN, dtype: int64"
+       "59.833333333333336"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "series.to_period(freq=\"W\")"
+    "#2. 6號學生3科平均分數是否有贏過班上一半的同學\n",
+    "# 否\n",
+    "mean_all =mean.median()\n",
+    "mean_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2019-01-06     2.5\n",
-       "2019-01-13     9.0\n",
-       "2019-01-20    16.0\n",
-       "Freq: W-SUN, dtype: float64"
+       "math_score       77.459667\n",
+       "english_score    73.484692\n",
+       "chinese_score    74.161985\n",
+       "Name: 6, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "series.resample('W').mean()"
+    "#由於班上同學成績不好，所以學校統一加分，加分方式為開根號乘以十，請問6號同學3科成績分別是?\n",
+    "score_apply = score_df.apply(lambda x : x**(0.5)*10)\n",
+    "score_apply.iloc[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "math_score       74.194221\n",
+       "english_score    78.350301\n",
+       "chinese_score    78.739928\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#承上題，加分後各科班平均變多少\n",
+    "score_apply.mean(axis = 0)"
    ]
   }
  ],
